--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 document.write(mosaic('evol')) 
 </script></div>
 
-<p>I like to cook, especially deserts like crème brûlées, pear & cream pie, and madeleines. I will post the recipes soon.</p>
+<p>I like to cook, especially desserts like crème brûlées, pear & cream pie, and madeleines. I will post the recipes soon.</p>
 
 <p>I like to read and collect graphic novels.</p>
 <div class="smallPix">
