Changed my picture + back to white background.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 
 <div class="avatar">
-	<img src="pix/evoluteur.jpeg">
+	<img src="pix/olivier-giulieri.jpg">
 	<span class="sociallinks">
 		<a href="https://www.linkedin.com/in/giulieri" target="_new"><img src="pix/social/in.png"/></a>
 		<a href="https://github.com/evoluteur" target="_new"><img src="pix/social/git.png"/></a>
