Added foureux at the bottom of the page.

--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@ document.write(mosaic('chakras'))
 
  <p>What do you like?</p>
 
- <p><br/><br/></p>
+
+ <p align="center"><img src="pix/foureux.jpg" class="foureux"></p>
 </body>
 
 </html>
