--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <head>
 	<title>Evoluteur</title>
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
 
     <link rel="icon" type="image/png" href="favicon.png" />
 	<script src="js/me.js"></script>
@@ -12,14 +14,16 @@
 
 <body>
 
-<div class="avatar">
-	<img src="pix/olivier-giulieri.jpg">
-	<span class="sociallinks">
-		<a href="https://www.linkedin.com/in/giulieri" target="_new"><img src="pix/social/in.png"/></a>
-		<a href="https://github.com/evoluteur" target="_new"><img src="pix/social/git.png"/></a>
-		<a href="https://twitter.com/evoluteur" target="_new"><img src="pix/social/tw.png"/></a>
-		<a href="https://www.pinterest.com/evoluteur/" target="_new"><img src="pix/social/pin.png"/></a> 
-	</span>
+<div class="avatar-holder">
+	<div class="avatar">
+		<img src="pix/olivier-giulieri.jpg">
+		<span class="sociallinks">
+			<a href="https://www.linkedin.com/in/giulieri" target="_new"><img src="pix/social/in.png"/></a>
+			<a href="https://github.com/evoluteur" target="_new"><img src="pix/social/git.png"/></a>
+			<a href="https://twitter.com/evoluteur" target="_new"><img src="pix/social/tw.png"/></a>
+			<a href="https://www.pinterest.com/evoluteur/" target="_new"><img src="pix/social/pin.png"/></a> 
+		</span>
+	</div>
 </div>
 
 <p>Hi,</p>
@@ -29,7 +33,7 @@
 <p>I like to code (mostly Javascript and CSS, sometimes SQL). I usually build UI for startups. I also experiment on model-driven architecture with <a target="_new" href="https://github.com/evoluteur">open source projects</a> like <a target="_new" href="http://evolutility.org">Evolutility</a> and I occasionally <a target="_new" href="https://www.codeproject.com/script/Articles/MemberArticles.aspx?amid=849212">post about it</a>.</p>
 <div class="smallPix1"> 
 <script>
-document.write(mosaic('evol')) 
+document.write(mosaic('evol'))
 </script></div>
 
 <p>I like to cook, especially desserts like crème brûlées, pear & cream pie, and madeleines. I will post the recipes soon.</p>
