Greating w/ “Hello World!”.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	</div>
 </div>
 
-<p>Hi,</p>
+<p>Hello World!</p>
 <p>My name is <strong>Olivier Giulieri</strong> (username <strong>Evoluteur</strong>). 
  I'm French, in my late 40's. I live in the San Francisco Bay Area.</p>
 
@@ -36,7 +36,7 @@
 document.write(mosaic('evol'))
 </script></div>
 
-<p>I like to cook, especially desserts like crème brûlées, pear & cream pie, and madeleines. I will post the recipes soon.</p>
+<p>I like to cook, especially desserts like crème brûlées, pear cream tart, and madeleines. I will post the recipes soon.</p>
 
 <p>I like to read and collect graphic novels.</p>
 <div class="smallPix">
