Smaller fourreux image + fixed spelling.

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ document.write(mosaic('chakras'))
  <p>What do you like?</p>
 
 
- <p align="center"><img src="pix/foureux.jpg" class="foureux"></p>
+ <p align="center"><img src="pix/fourreux.jpg" class="fourreux"></p>
 </body>
 
 </html>
