Changed title to “Evol=lovE” b/c palindromes are cool.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html xmlns="http://www.w3.org/1999/xhtml" > 
 <head>
-	<title>Evoluteur</title>
+	<title>Evol=lovE</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -26,7 +26,7 @@
 	</div>
 </div>
 
-<p>Hello World!</p>
+<p><br/>Hello World!<br/>&nbsp;</p>
 <p>My name is <strong>Olivier Giulieri</strong> (username <strong>Evoluteur</strong>). 
  I'm French, in my late 40's. I live in the San Francisco Bay Area.</p>
 
