Added more comics + hover effect.

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 <p>My name is <strong>Olivier Giulieri</strong> (username <strong>Evoluteur</strong>). 
  I'm French, in my late 40's. I live in the San Francisco Bay Area.</p>
 
-<p>I like to code (mostly Javascript and CSS, sometimes SQL). I usually build UI for startups. I also experiment on model-driven architecture with <a target="_new" href="https://github.com/evoluteur">open source projects</a> like <a target="_new" href="http://evolutility.org">Evolutility</a> and I occasionally <a target="_new" href="https://www.codeproject.com/script/Articles/MemberArticles.aspx?amid=849212">post about it</a>.</p>
-<div class="smallPix1"> 
+<p>I like to code (mostly Javascript and CSS, sometimes SQL). I usually build UI for startups. I also experiment with <a target="_new" href="https://github.com/evoluteur">open source projects</a> like <a target="_new" href="http://evolutility.org">Evolutility</a> and I occasionally <a target="_new" href="https://www.codeproject.com/script/Articles/MemberArticles.aspx?amid=849212">post</a> about it.</p>
+<div class="pixGroup smallPix"> 
 <script>
 document.write(mosaic('evol'))
 </script></div>
@@ -39,28 +39,28 @@ document.write(mosaic('evol'))
 <p>I like to cook, especially desserts like crème brûlées, pear cream tart, and madeleines. I will post the recipes soon.</p>
 
 <p>I like to read and collect graphic novels.</p>
-<div class="smallPix">
+<div class="pixGroup smallPix">
 <script>
 document.write(mosaic('comics')) 
 </script>
 </div>
 
 <p>I like to watch sci-fi movies.</p>
-<div class="mediumPix">
+<div class="pixGroup mediumPix">
 <script>
 document.write(mosaic('movies'))
 </script>
 </div>
 
 <p>I like to look at <a target="_new" href="https://www.google.com/search?q=fractals&source=lnms&tbm=isch">fractals</a> and think about <a target="_new" href="https://en.wikipedia.org/wiki/Morphogenetic_field">morphogenetic fields</a>.</p>
-<div class="smallPix"> 
+<div class="pixGroup smallPix"> 
 <script>
 document.write(mosaic('fractals')) 
 </script>
 </div>
 
 <p>I like to meditate and make <a target="_new" href="http://chakradesign.com">chakras charms</a>.</p>
-<div class="smallPix"> 
+<div class="pixGroup chakraPix"> 
 <script>
 document.write(mosaic('chakras')) 
 </script></div>
