New Year, New Web Site.

--- a/index.html
+++ b/index.html
@@ -9,66 +9,158 @@
 	<script src="js/me.js"></script>
 	<link href="css/me.css" rel="stylesheet" /> 
 
-	<meta name="keywords" content="evoluteur olivier giulieri javascript meditation ui ux model home page" />
+	<meta name="keywords" content="evoluteur olivier giulieri home page french" />
 </head>
 
 <body>
 
-<div class="avatar-holder">
-	<div class="avatar">
-		<img src="pix/olivier-giulieri.jpg">
-		<span class="sociallinks">
-			<a href="https://github.com/evoluteur" target="_new"><img src="pix/social/git.png"/></a>
-			<a href="https://www.linkedin.com/in/giulieri" target="_new"><img src="pix/social/in.png"/></a>
-			<a href="https://www.pinterest.com/evoluteur/" target="_new"><img src="pix/social/pin.png"/></a> 
-			<a href="https://twitter.com/evoluteur" target="_new"><img src="pix/social/tw.png"/></a>
-		</span>
+<section id="hello" class="c0">
+
+   <div class="c7-dots">
+    <a href="#hello" class="c7-dots-7"><div></div> <span class="sTitle">Me</span></a>
+    <a href="#code" class="c7-dots-6"><div></div><span class="sTitle">Code</span></a>
+    <a href="#comics" class="c7-dots-5"><div></div><span class="sTitle">Graphic Novels</span></a>
+    <a href="#recipe" class="c7-dots-4"><div></div><span class="sTitle">Desserts</span></a>
+    <a href="#movies" class="c7-dots-3"><div></div><span class="sTitle">Movies</span></a>
+    <a href="#fractals" class="c7-dots-2"><div></div><span class="sTitle">Thoughts</span></a>
+    <a href="#chakra" class="c7-dots-1"><div></div><span class="sTitle">Chakras</span></a>
+    <span class="clearer"></span>
+   </div>
+
+	<div class="avatar-holder">
+		<div class="avatar">
+			<div class="pixTitleHolder">
+				<img src="pix/olivier-giulieri.jpg">
+			</div>
+			<span class="sociallinks">
+				<a href="https://github.com/evoluteur"><img src="pix/social/git.gif" alt="GitHub" /></a>
+				<a href="https://www.linkedin.com/in/giulieri"><img src="pix/social/in.gif" alt="LinkedIn" /></a>
+				<a href="https://www.npmjs.com/~evoluteur"><img src="pix/social/npm.gif" alt="NPM" /></a>
+				<a href="https://www.codeproject.com/script/Articles/MemberArticles.aspx?amid=849212"><img src="pix/social/cp.gif" alt="CodeProject" /></a>
+				<a href="https://www.pinterest.com/evoluteur/"><img src="pix/social/pin.gif" alt="Pinterest" /></a> 
+				<a href="https://twitter.com/evoluteur"><img src="pix/social/tw.gif" alt="Twitter" /></a>
+			</span>
+		</div>
 	</div>
-</div>
+	<h2 class="helloworld">Happy New Year !</h2>
 
-<p><br/>Hello World!<br/>&nbsp;</p>
-<p>My name is <strong>Olivier Giulieri</strong> (username <strong>Evoluteur</strong>). 
- I'm French, in my late 40's. I live in the San Francisco Bay Area.</p>
+</section>
 
-<p>I like to code (mostly Javascript and CSS, sometimes SQL). I usually build UI for startups. I also experiment with <a target="_new" href="https://github.com/evoluteur">open source projects</a> like <a target="_new" href="http://evolutility.org">Evolutility</a> and I occasionally <a target="_new" href="https://www.codeproject.com/script/Articles/MemberArticles.aspx?amid=849212">post</a> about it.</p>
-<div class="pixGroup smallPix"> 
-<script>
-document.write(mosaic('evol'))
-</script></div>
+<section id="ny" class="c7"><div class="sTitle">Hello</div>
 
-<p>I like to cook, especially desserts like crème brûlées, pear cream tart, and madeleines. I will post the recipes soon.</p>
+	<p>My name is <strong>Olivier Giulieri</strong> (username <strong>Evoluteur</strong>). 
+	 I'm French, in my late 40s. I live with a cat, in the San Francisco Bay Area.</p>
 
-<p>I like to read and collect graphic novels.</p>
-<div class="pixGroup smallPix">
-<script>
-document.write(mosaic('comics')) 
-</script>
-</div>
+</section>
 
-<p>I like to watch sci-fi movies.</p>
-<div class="pixGroup mediumPix">
-<script>
-document.write(mosaic('movies'))
-</script>
-</div>
+<section id="code" class="c6"><div class="sTitle">Code</div>
+	<p>I like to code (mostly Javascript and CSS, sometimes SQL). I usually build UIs for startups. I also experiment with <a target="_new" href="https://github.com/evoluteur">open source projects</a> like <a target="_new" href="http://evolutility.org">Evolutility</a> and I occasionally <a target="_new" href="https://www.codeproject.com/script/Articles/MemberArticles.aspx?amid=849212">post</a> about it.</p>
+	<div class="pixGroup evolPix"> 
+		<script>
+		document.write(mosaic('evol'))
+		</script>
+	</div>
+	<p>My favorite quote about programming is 
+		<i>"Smart data structures and dumb code works a lot better than the
+other way around."</i> - Eric S. Raymond
+	in <a href="https://en.wikipedia.org/wiki/The_Cathedral_and_the_Bazaar">The Cathedral and the Bazaar</a>. 
+	</p>
+</section>
 
-<p>I like to look at <a target="_new" href="https://www.google.com/search?q=fractals&source=lnms&tbm=isch">fractals</a> and think about <a target="_new" href="https://en.wikipedia.org/wiki/Morphogenetic_field">morphogenetic fields</a>.</p>
-<div class="pixGroup smallPix"> 
-<script>
-document.write(mosaic('fractals')) 
-</script>
-</div>
+<section id="comics" class="c5"><div class="sTitle">Graphic Novels</div>
+	<p>I like to read and collect graphic novels, mostly Sci-Fi, usually in French.</p>
+	<div class="pixGroup comicsPix">
+		<script>
+		document.write(mosaic('comics')) 
+		</script>
+	</div>
+</section>
 
-<p>I like to meditate and make <a target="_new" href="http://chakradesign.com">chakras charms</a>.</p>
-<div class="pixGroup chakraPix"> 
-<script>
-document.write(mosaic('chakras')) 
-</script></div>
+<section id="recipe" class="c4"><div class="sTitle">Desserts</div>
+	<p>I like to cook (and eat), especially desserts. Here are some of my recipes.</p>
 
- <p>What do you like?</p>
+	<div class="pixGroup evolPix"> 
+		<script>
+		document.write(mosaic('recipes'))
+		</script>
+	</div>
 
+<a id="linkIceCream" class="link
+" href="javascript:showIceCream()">[More desserts...]</a>
+<div id="IceCream">
+	<p>Ice creams, do no require cooking, just assembling, and are totally worth it.</p>
+ 
+	<div class="iceCreamCard">
+		<div><strong>Poire Belle Hélène</strong>
+		 <ul>
+		 	<li>Vanilla ice cream</li>
+		 	<li>Pears in sirop</li>
+		 	<li>Melted chocolat</li>
+		 	<li>Chantilly cream</li>
+		 	<li>Grilled almonds</li>
+		 </ul>
+		 </div>
+		<div><strong>Peach Melba</strong>
+		 <ul>
+		 	<li>Vanilla ice cream</li>
+		 	<li>Peaches in sirop</li>
+		 	<li>Chantilly cream</li>
+		 	<li>Grilled almonds</li>
+		 </ul>
+		</div>
+		<div><strong>Café Liégeois</strong>
+		 <ul>
+		 	<li>Coffee ice cream</li>
+		 	<li>Coffee</li>
+		 	<li>Chantilly cream</li>
+		 	<li>Coffee beans</li>
+		 </ul>
+		</div>
+		<div>
+		<strong>Vacherin</strong>
+		 <ul>
+		 	<li>Meringue</li>
+		 	<li>Vanilla ice cream</li>
+		 	<li>Coffee/caramel/other ice cream or sorbet</li>
+		 	<li>Chantilly cream</li>
+		 </ul>
+		</div>
+	</div>
+	<div class="clearer"/>
+</div> 
+</section>
 
- <p align="center"><img src="pix/fourreux.jpg" class="fourreux"></p>
+<section id="movies" class="c3"><div class="sTitle">Movies</div>
+	<p>I like to watch sci-fi movies.</p>
+	<div class="pixGroup moviePix">
+		<script>
+		document.write(mosaic('movies'))
+		</script>
+	</div>
+</section>
+
+<section id="fractals" class="c2"><div class="sTitle">Thoughts</div>
+	<p>I like to look at <a target="_new" href="https://www.google.com/search?q=fractals&source=lnms&tbm=isch">fractals</a> (where math becomes art) and think about <a target="_new" href="https://en.wikipedia.org/wiki/Morphogenetic_field">morphogenetic fields</a>.</p>
+	<div class="pixGroup smallPix"> 
+		<script>
+		document.write(mosaic('fractals')) 
+		</script>
+	</div>
+</section>
+
+<section id="chakra" class="c1"><div class="sTitle">Chakras</div>
+	<p>I like to meditate and make <a target="_new" href="http://chakradesign.com">chakras charms</a>.</p>
+	<div class="pixGroup chakraPix"> 
+	<script>
+	document.write(mosaic('chakras')) 
+	</script></div>
+</section>
+
+<section id="you" class="c8"><div class="sTitle">You</div>
+	<p>What do you like?</p>
+</section>
+
+<div class="flower"/>
 </body>
 
 </html>
