--- a/recipes/desserts/madeleines.html
+++ b/recipes/desserts/madeleines.html
@@ -47,9 +47,9 @@
 	<li>Add eggs and flower (using the sifter) and a pinch of salt</li>
 	<li>Add the yeast or baking powder</li>
 	<li>(optional) Add the lemon zest or vanilla extract</li>
-	<li>Mix until you the dough is homogeneous</li>
+	<li>Mix until the dough is homogeneous</li>
 	<li>Put a little butter on the madeleines pan</li>
-	<li>Fill each slot on the madeleines pan w/ the dough</li>
+	<li>Fill each slot on the madeleines pan w/ dough</li>
 	<li>(optional) Add sliced almonds or pine nuts on top</li>
 	<li>Put in the oven for 10 to 15 minutes (until golden)</li>
 	<li>Get the madeleines tray out of the oven, and the madelines out of the tray, and let cool down</li>
