Added robots.txt and humans.txt files + meta tags.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 	<script src="js/me.js"></script>
 	<link href="css/me.css" rel="stylesheet" /> 
 
-	<meta name="keywords" content="evoluteur olivier giulieri home page french" />
+	<meta name="keywords" content="olivier giulieri home page evoluteur french" />
+	<meta name="description" content="Home Page of Olivier Giulieri" />
 </head>
 
 <body>
@@ -42,11 +43,11 @@
 			</span>
 		</div>
 	</div>
-	<h2 class="helloworld">Happy New Year !</h2>
+	<h2 class="helloworld">Hello,</h2>
 
 </section>
 
-<section id="ny" class="c7"><div class="sTitle">Hello</div>
+<section id="ny" class="c7"><div class="sTitle">Olivier</div>
 
 	<p>My name is <strong>Olivier Giulieri</strong> (username <strong>Evoluteur</strong>). 
 	 I'm French, in my late 40s. I live with a cat, in the San Francisco Bay Area.</p>
