Browser compatibility fix.

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 <section id="code" class="c6"><div class="sTitle">Code</div>
 	<p>I like to code (mostly Javascript and CSS, sometimes SQL). I usually build UIs for startups. I also experiment with <a target="_new" href="https://github.com/evoluteur">open source projects</a> like <a target="_new" href="http://evolutility.org">Evolutility</a> and I occasionally <a target="_new" href="https://www.codeproject.com/script/Articles/MemberArticles.aspx?amid=849212">post</a> about it.</p>
 	<div class="pixGroup evolPix"> 
-		<script>
+		<script type="text/javascript">
 		document.write(mosaic('evol'))
 		</script>
 	</div>
@@ -71,7 +71,7 @@ other way around."</i> - Eric S. Raymond
 <section id="comics" class="c5"><div class="sTitle">Graphic Novels</div>
 	<p>I like to read and collect graphic novels, mostly Sci-Fi, usually in French.</p>
 	<div class="pixGroup comicsPix">
-		<script>
+		<script type="text/javascript">
 		document.write(mosaic('comics')) 
 		</script>
 	</div>
@@ -81,7 +81,7 @@ other way around."</i> - Eric S. Raymond
 	<p>I like to cook (and eat), especially desserts. Here are some of my recipes.</p>
 
 	<div class="pixGroup evolPix"> 
-		<script>
+		<script type="text/javascript">
 		document.write(mosaic('recipes'))
 		</script>
 	</div>
@@ -134,7 +134,7 @@ other way around."</i> - Eric S. Raymond
 <section id="movies" class="c3"><div class="sTitle">Movies</div>
 	<p>I like to watch sci-fi movies.</p>
 	<div class="pixGroup moviePix">
-		<script>
+		<script type="text/javascript">
 		document.write(mosaic('movies'))
 		</script>
 	</div>
@@ -143,7 +143,7 @@ other way around."</i> - Eric S. Raymond
 <section id="fractals" class="c2"><div class="sTitle">Thoughts</div>
 	<p>I like to look at <a target="_new" href="https://www.google.com/search?q=fractals&source=lnms&tbm=isch">fractals</a> (where math becomes art) and think about <a target="_new" href="https://en.wikipedia.org/wiki/Morphogenetic_field">morphogenetic fields</a>.</p>
 	<div class="pixGroup smallPix"> 
-		<script>
+		<script type="text/javascript">
 		document.write(mosaic('fractals')) 
 		</script>
 	</div>
@@ -152,7 +152,7 @@ other way around."</i> - Eric S. Raymond
 <section id="chakra" class="c1"><div class="sTitle">Chakras</div>
 	<p>I like to meditate and make <a target="_new" href="http://chakradesign.com">chakras charms</a>.</p>
 	<div class="pixGroup chakraPix"> 
-	<script>
+	<script type="text/javascript">
 	document.write(mosaic('chakras')) 
 	</script></div>
 </section>
