--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
 
    <div class="c7-dots">
     <a href="#hello" class="c7-dots-7"><div></div> <span class="sTitle">Me</span></a>
-    <a href="#code" class="c7-dots-6"><div></div><span class="sTitle">Code</span></a>
+    <a href="#evol" class="c7-dots-6"><div></div><span class="sTitle">Code</span></a>
     <a href="#comics" class="c7-dots-5"><div></div><span class="sTitle">Graphic Novels</span></a>
-    <a href="#recipe" class="c7-dots-4"><div></div><span class="sTitle">Desserts</span></a>
+    <a href="#recipes" class="c7-dots-4"><div></div><span class="sTitle">Desserts</span></a>
     <a href="#movies" class="c7-dots-3"><div></div><span class="sTitle">Movies</span></a>
     <a href="#fractals" class="c7-dots-2"><div></div><span class="sTitle">Thoughts</span></a>
-    <a href="#chakra" class="c7-dots-1"><div></div><span class="sTitle">Chakras</span></a>
+    <a href="#chakras" class="c7-dots-1"><div></div><span class="sTitle">Chakras</span></a>
     <span class="clearer"></span>
    </div>
 
@@ -54,13 +54,9 @@
 
 </section>
 
-<section id="code" class="c6"><div class="sTitle">Code</div>
+<section id="evol" class="c6"><div class="sTitle">Code</div>
 	<p>I like to code (mostly Javascript and CSS, sometimes SQL). I usually build UIs for startups. I also experiment with <a target="_new" href="https://github.com/evoluteur">open source projects</a> like <a target="_new" href="http://evolutility.org">Evolutility</a> and I occasionally <a target="_new" href="https://www.codeproject.com/script/Articles/MemberArticles.aspx?amid=849212">post</a> about it.</p>
-	<div class="pixGroup evolPix"> 
-		<script type="text/javascript">
-		document.write(mosaic('evol'))
-		</script>
-	</div>
+	<div id="evol2" class="pixGroup evolPix"></div>
 	<p>My favorite quote about programming is 
 		<i>"Smart data structures and dumb code works a lot better than the
 other way around."</i> - Eric S. Raymond
@@ -70,21 +66,13 @@ other way around."</i> - Eric S. Raymond
 
 <section id="comics" class="c5"><div class="sTitle">Graphic Novels</div>
 	<p>I like to read and collect graphic novels, mostly Sci-Fi, usually in French.</p>
-	<div class="pixGroup comicsPix">
-		<script type="text/javascript">
-		document.write(mosaic('comics')) 
-		</script>
-	</div>
+	<div id="comics2" class="pixGroup comicsPix"></div>
 </section>
 
-<section id="recipe" class="c4"><div class="sTitle">Desserts</div>
+<section id="recipes" class="c4"><div class="sTitle">Desserts</div>
 	<p>I like to cook (and eat), especially desserts. Here are some of my recipes.</p>
 
-	<div class="pixGroup evolPix"> 
-		<script type="text/javascript">
-		document.write(mosaic('recipes'))
-		</script>
-	</div>
+	<div id="recipes2" class="pixGroup evolPix"></div>
 
 <a id="linkIceCream" class="link
 " href="javascript:showIceCream()">[More desserts...]</a>
@@ -133,28 +121,17 @@ other way around."</i> - Eric S. Raymond
 
 <section id="movies" class="c3"><div class="sTitle">Movies</div>
 	<p>I like to watch sci-fi movies.</p>
-	<div class="pixGroup moviePix">
-		<script type="text/javascript">
-		document.write(mosaic('movies'))
-		</script>
-	</div>
+	<div id="movies2" class="pixGroup moviePix"></div>
 </section>
 
 <section id="fractals" class="c2"><div class="sTitle">Thoughts</div>
 	<p>I like to look at <a target="_new" href="https://www.google.com/search?q=fractals&source=lnms&tbm=isch">fractals</a> (where math becomes art) and think about <a target="_new" href="https://en.wikipedia.org/wiki/Morphogenetic_field">morphogenetic fields</a>.</p>
-	<div class="pixGroup smallPix"> 
-		<script type="text/javascript">
-		document.write(mosaic('fractals')) 
-		</script>
-	</div>
+	<div id="fractals2" class="pixGroup smallPix"></div>
 </section>
 
-<section id="chakra" class="c1"><div class="sTitle">Chakras</div>
+<section id="chakras" class="c1"><div class="sTitle">Chakras</div>
 	<p>I like to meditate and make <a target="_new" href="http://chakradesign.com">chakras charms</a>.</p>
-	<div class="pixGroup chakraPix"> 
-	<script type="text/javascript">
-	document.write(mosaic('chakras')) 
-	</script></div>
+	<div id="chakras2" class="pixGroup chakraPix"></div>
 </section>
 
 <section id="you" class="c8"><div class="sTitle">You</div>
@@ -162,6 +139,10 @@ other way around."</i> - Eric S. Raymond
 </section>
 
 <div class="flower"/>
+
+<script type="text/javascript">
+	['evol','comics','recipes','movies','fractals','chakras'].forEach(setMosaic);
+</script>
 </body>
 
 </html>
