Needed for mobile?

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<meta name="description" content="Home Page of Olivier Giulieri" />
 </head>
 
-<body>
+<body onload="setPage()">
 
 <section id="hello" class="c0">
 
@@ -138,11 +138,8 @@ other way around."</i> - Eric S. Raymond
 	<p>What do you like?</p>
 </section>
 
-<div class="flower"/>
+<div class="flower"></div>
 
-<script type="text/javascript">
-	['evol','comics','recipes','movies','fractals','chakras'].forEach(setMosaic);
-</script>
 </body>
 
 </html>
