Added my favorite artists.

--- a/index.html
+++ b/index.html
@@ -56,7 +56,9 @@
 
 <section id="evol" class="c6"><div class="sTitle">Code</div>
 	<p>I like to code (mostly Javascript and CSS, sometimes SQL). I usually build UIs for startups. I also experiment with <a target="_new" href="https://github.com/evoluteur">open source projects</a> like <a target="_new" href="http://evolutility.org">Evolutility</a> and I occasionally <a target="_new" href="https://www.codeproject.com/script/Articles/MemberArticles.aspx?amid=849212">post</a> about it.</p>
+
 	<div id="evol2" class="pixGroup evolPix"></div>
+	
 	<p>My favorite quote about programming is 
 		<i>"Smart data structures and dumb code works a lot better than the
 other way around."</i> - Eric S. Raymond
@@ -65,12 +67,12 @@ other way around."</i> - Eric S. Raymond
 </section>
 
 <section id="comics" class="c5"><div class="sTitle">Graphic Novels</div>
-	<p>I like to read and collect graphic novels, mostly Sci-Fi, usually in French.</p>
+	<p>I like to read and collect graphic novels, mostly sci-fi, usually in French.</p>
 	<div id="comics2" class="pixGroup comicsPix"></div>
 </section>
 
 <section id="recipes" class="c4"><div class="sTitle">Desserts</div>
-	<p>I like to cook (and eat), especially desserts. Here are some of my recipes.</p>
+	<p>I like to cook (and eat), especially desserts. Here are the recipes for some of my specialties.</p>
 
 	<div id="recipes2" class="pixGroup evolPix"></div>
 
@@ -125,8 +127,12 @@ other way around."</i> - Eric S. Raymond
 </section>
 
 <section id="fractals" class="c2"><div class="sTitle">Thoughts</div>
-	<p>I like to look at <a target="_new" href="https://www.google.com/search?q=fractals&source=lnms&tbm=isch">fractals</a> (where math becomes art) and think about <a target="_new" href="https://en.wikipedia.org/wiki/Morphogenetic_field">morphogenetic fields</a>.</p>
+	<p>I like to look at <a target="_new" href="https://www.google.com/search?q=fractals&source=lnms&tbm=isch">fractals</a> (where math becomes art) and think about <a target="_new" href="http://www.sheldrake.org/research/morphic-resonance/introduction">morphic fields</a>.</p>
 	<div id="fractals2" class="pixGroup smallPix"></div>
+
+	<p>My favorite artists are Van Gogh, Hokusai, and Moebius.</p>
+	<div id="art2" class="pixGroup smallPix"></div>
+
 </section>
 
 <section id="chakras" class="c1"><div class="sTitle">Chakras</div>
