--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 </section>
 
 <section id="evol" class="c6"><div class="sTitle">Code</div>
-	<p>I like to code (mostly Javascript and CSS, sometimes SQL). I usually build UIs for startups. I also experiment with <a target="_new" href="https://github.com/evoluteur">open source projects</a> like <a target="_new" href="http://evolutility.org">Evolutility</a> and I occasionally <a target="_new" href="https://www.codeproject.com/script/Articles/MemberArticles.aspx?amid=849212">post</a> about it.</p>
+	<p>I like to code (mostly Javascript and CSS, sometimes SQL). I usually build UIs for startups. I also experiment with <a target="_new" href="https://github.com/evoluteur">open source projects</a> like <a target="_new" href="http://evolutility.org">Evolutility</a> to satisfy my obsession with <a target="_new" href="https://en.wikipedia.org/wiki/Model-driven_architecture">model-driven architecture</a>, and I occasionally <a target="_new" href="https://www.codeproject.com/script/Articles/MemberArticles.aspx?amid=849212">post</a> about it.</p>
 
 	<div id="evol2" class="pixGroup evolPix"></div>
 	
@@ -69,6 +69,12 @@ other way around."</i> - Eric S. Raymond
 <section id="comics" class="c5"><div class="sTitle">Graphic Novels</div>
 	<p>I like to read and collect graphic novels, mostly sci-fi, usually in French.</p>
 	<div id="comics2" class="pixGroup comicsPix"></div>
+
+	<p>...sometimes in English.</p>
+	<div id="comics-us2" class="pixGroup comicsPix"></div>
+
+	<p class="clearer">Did you know that some of the best European graphic novels are now available in English?</p>
+	<div id="comics-amazon2" class="pixGroup comicsPix"></div>
 </section>
 
 <section id="recipes" class="c4"><div class="sTitle">Desserts</div>
@@ -129,10 +135,6 @@ other way around."</i> - Eric S. Raymond
 <section id="fractals" class="c2"><div class="sTitle">Thoughts</div>
 	<p>I like to look at <a target="_new" href="https://www.google.com/search?q=fractals&source=lnms&tbm=isch">fractals</a> (where math becomes art) and think about <a target="_new" href="http://www.sheldrake.org/research/morphic-resonance/introduction">morphic fields</a>.</p>
 	<div id="fractals2" class="pixGroup smallPix"></div>
-
-	<p>My favorite artists are Van Gogh, Hokusai, and Moebius.</p>
-	<div id="art2" class="pixGroup smallPix"></div>
-
 </section>
 
 <section id="chakras" class="c1"><div class="sTitle">Chakras</div>
