Changed order of categories.

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
    <div class="c7-dots">
     <a href="#hello" class="c7-dots-7"><div></div> <span class="sTitle">Me</span></a>
     <a href="#evol" class="c7-dots-6"><div></div><span class="sTitle">Code</span></a>
-    <a href="#comics" class="c7-dots-5"><div></div><span class="sTitle">Graphic Novels</span></a>
-    <a href="#recipes" class="c7-dots-4"><div></div><span class="sTitle">Desserts</span></a>
+    <a href="#recipes" class="c7-dots-5"><div></div><span class="sTitle">Cooking</span></a>
+    <a href="#comics" class="c7-dots-4"><div></div><span class="sTitle">Graphic Novels</span></a>
     <a href="#movies" class="c7-dots-3"><div></div><span class="sTitle">Movies</span></a>
     <a href="#fractals" class="c7-dots-2"><div></div><span class="sTitle">Thoughts</span></a>
     <a href="#chakras" class="c7-dots-1"><div></div><span class="sTitle">Chakras</span></a>
@@ -47,7 +47,7 @@
 
 </section>
 
-<section id="ny" class="c7"><div class="sTitle">Olivier</div>
+<section id="ny" class="c7"><div class="sTitle">Me</div>
 
 	<p>My name is <strong>Olivier Giulieri</strong> (username <strong>Evoluteur</strong>). 
 	 I'm French, in my late 40s. I live with a cat, in the San Francisco Bay Area.</p>
@@ -66,19 +66,9 @@ other way around."</i> - Eric S. Raymond
 	</p>
 </section>
 
-<section id="comics" class="c5"><div class="sTitle">Graphic Novels</div>
-	<p>I like to read and collect graphic novels, mostly sci-fi, usually in French.</p>
-	<div id="comics2" class="pixGroup comicsPix"></div>
 
-	<p>...sometimes in English.</p>
-	<div id="comics-us2" class="pixGroup comicsPix"></div>
-
-	<p class="clearer">Did you know that some of the best European graphic novels are now available in English?</p>
-	<div id="comics-amazon2" class="pixGroup comicsPix"></div>
-</section>
-
-<section id="recipes" class="c4"><div class="sTitle">Desserts</div>
-	<p>I like to cook (and eat), especially desserts. Here are the recipes for some of my specialties.</p>
+<section id="recipes" class="c5"><div class="sTitle">Cooking</div>
+	<p>I like to cook (and eat), especially desserts.</p>
 
 	<div id="recipes2" class="pixGroup evolPix"></div>
 
@@ -125,6 +115,17 @@ other way around."</i> - Eric S. Raymond
 	</div>
 	<div class="clearer"/>
 </div> 
+</section>
+
+<section id="comics" class="c4"><div class="sTitle">Graphic Novels</div>
+	<p>I like to read and collect graphic novels, mostly sci-fi, usually in French.</p>
+	<div id="comics2" class="pixGroup comicsPix"></div>
+
+	<p>...sometimes in English.</p>
+	<div id="comics-us2" class="pixGroup comicsPix"></div>
+
+	<p class="clearer">Did you know that some of the best European graphic novels are now available in English?</p>
+	<div id="comics-amazon2" class="pixGroup comicsPix"></div>
 </section>
 
 <section id="movies" class="c3"><div class="sTitle">Movies</div>
