Added self w/ Neige.

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 <section id="ny" class="c7"><div class="sTitle">Me</div>
 
 	<p>My name is <strong>Olivier Giulieri</strong> (username <strong>Evoluteur</strong>). 
-	 I'm French, in my late 40s. I live with a cat, in the San Francisco Bay Area.</p>
+	 I'm French, in my late 40s. I live in the San Francisco Bay Area with <a href="neige.html">Neige</a> my lovely cat.</p>
 
 </section>
 
