--- a/recipes/desserts/madeleines.html
+++ b/recipes/desserts/madeleines.html
@@ -20,7 +20,7 @@
 <p>Ingredients for 16 madeleines:
 <ul>
 	<li>120 grams of butter</li>
-	<li>120 grams of flower</li>
+	<li>120 grams of flour</li>
 	<li>120 grams of sugar</li>
 	<li>2 eggs</li>
 	<li>1 pinch of salt</li>
@@ -44,7 +44,7 @@
 	<li>Prepare yeast according to instructions on package</li>
 	<li>Pre-heat oven at 375°F</li>
 	<li>Mix soft (but not melted) butter and sugar</li>
-	<li>Add eggs and flower (using the sifter) and a pinch of salt</li>
+	<li>Add eggs and flour (using the sifter) and a pinch of salt</li>
 	<li>Add the yeast or baking powder</li>
 	<li>(optional) Add the lemon zest or vanilla extract</li>
 	<li>Mix until the dough is homogeneous</li>
