Added background pattern + CSS improvements for links.

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ other way around."</i> - Eric S. Raymond
 	<p>What do you like?</p>
 </section>
 
-<div class="flower"></div>
+<div class="bottomSpace"></div>
 
 </body>
 
