--- a/neige.html
+++ b/neige.html
@@ -13,7 +13,7 @@
 
 <div style="margin:20px">
 
-	<h2>I tried to take a selfy with my cat.</h2>
+	<h2 style="margin-left: 20px;">I tried to take a selfy with my cat.</h2>
 
 	<div class="pixGroup"> 
 		<img src="pix/neige/neige-me-1.jpg">
