--- a/neige.html
+++ b/neige.html
@@ -1,6 +1,6 @@
 <html xmlns="http://www.w3.org/1999/xhtml" > 
 <head>
-	<title>Evol=lovE</title>
+	<title>Selfy with my cat</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -15,11 +15,11 @@
 
 	<h2 style="margin-left: 20px;">I tried to take a selfy with my cat.</h2>
 
-	<div class="pixGroup"> 
-		<img src="pix/neige/neige-me-1.jpg">
-		<img src="pix/neige/neige-me-2.jpg">
-		<img src="pix/neige/neige-me-3.jpg">
-		<img src="pix/neige/neige-me-4.jpg">
+	<div> 
+		<img class="pixShadow" src="pix/neige/neige-me-1.jpg">
+		<img class="pixShadow" src="pix/neige/neige-me-2.jpg">
+		<img class="pixShadow" src="pix/neige/neige-me-3.jpg">
+		<img class="pixShadow" src="pix/neige/neige-me-4.jpg">
 	</div>
 </div>
 
