Changed “more” links.

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ other way around."</i> - Eric S. Raymond
 	<div id="recipes2" class="pixGroup evolPix"></div>
 
 <a id="linkIceCream" class="link
-" href="javascript:showIceCream()">[More desserts...]</a>
+" href="javascript:showIceCream()">[ Show more desserts ]</a>
 <div id="IceCream">
 	<p>Ice creams, do no require cooking, just assembling, and are totally worth it.</p>
  
