--- a/neige.html
+++ b/neige.html
@@ -11,9 +11,13 @@
 
 <body>
 
-<div style="margin:20px">
+<div class="nav">
+	<a href="index.html">Evoluteur</a> > My Cat
+</div>
 
-	<h2 style="margin-left: 20px;">I tried to take a selfy with my cat.</h2>
+<section class="c00"> 
+
+	<h2>I tried to take a selfy with my cat.</h2>
 
 	<div> 
 		<img class="pixShadow" src="pix/neige/neige-me-1.jpg">
@@ -23,6 +27,6 @@
 	</div>
 </div>
 
-</body>
+</section>
 
 </html>
