--- a/recipes/desserts/pear-cream-tart.html
+++ b/recipes/desserts/pear-cream-tart.html
@@ -16,12 +16,13 @@
 <h1>Pear cream tart</h1>
 
 <h3 style="color:#ff1744;">Page Under Construction</h3>
+
 <p>Ingredients:
 <ul>
 	<li>4 pears</li>
-	<li>crust</li>
+	<li>pie crust (make it or buy it)</li>
 	<li>1 egg yulk</li>
-	<li>heavy whip cream</li>
+	<li>15 cl of heavy whip cream</li>
 	<li>vanilla extract</li>
 	<li>a pinch of salt</li>
 </ul>
@@ -29,6 +30,11 @@
 
 <p>Instructions:
 <ol>
+	<li>Pre-heat oven at 375°F</li>
+	<li>Spread pie crust on dish</li>
+	<li></li>
+	<li></li>
+	<li></li>
 	<li></li>
 	<li></li>
 	<li></li>
