--- a/recipes/desserts/madeleines.html
+++ b/recipes/desserts/madeleines.html
@@ -48,14 +48,14 @@
 	<li>Add the yeast or baking powder</li>
 	<li>(optional) Add the lemon zest or vanilla extract</li>
 	<li>Mix until the dough is homogeneous</li>
-	<li>Put a little butter on the madeleines pan</li>
+	<li>Put a little melted butter on the madeleines pan (to prevent sticking)</li>
 	<li>Fill each slot on the madeleines pan w/ dough</li>
 	<li>(optional) Add sliced almonds or pine nuts on top</li>
 	<li>Put in the oven for 10 to 15 minutes (until golden)</li>
 	<li>Get the madeleines tray out of the oven, and the madelines out of the tray, and let cool down</li>
 </ol>
 
-<p>Notes: best a day they are baked.</p>
+<p>Notes: best on the day they are baked, but can be kept for a week in a container.</p>
 
 <p><img class="pixShadow" src="../../pix/recipes/madeleines-tray.jpg"/></p>
 
